force-app/main/default/objects/NotaFiscal__c/NotaFiscal__c.object-meta.xml
<CustomObject>
    <label>Nota Fiscal</label>
    <nameField>
        <displayFormat>NF {0000000000}</displayFormat>
        <label>Número NF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas Fiscais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>