force-app/main/default/objects/NotaFiscal__c/fields/ClienteId__c.field-meta.xml
<CustomField>
    <fullName>ClienteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <type>Lookup</type>
</CustomField>