force-app/main/default/objects/NotaFiscal__c/fields/CodigoNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>CodigoNotaFiscal__c</fullName>
    <externalId>true</externalId>
    <label>Código Nota Fiscal</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>