force-app/main/default/objects/NotaFiscal__c/fields/CondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de Pagamento</label>
    <referenceTo>CondicaoPagamento__c</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <type>Lookup</type>
</CustomField>