force-app/main/default/objects/NotaFiscal__c/fields/ConsignatarioId__c.field-meta.xml
<CustomField>
    <fullName>ConsignatarioId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignatario</label>
    <referenceTo>Transportadora__c</referenceTo>
    <relationshipLabel>Notas Fiscais (Consignatario)</relationshipLabel>
    <relationshipName>NotasFiscais02</relationshipName>
    <type>Lookup</type>
</CustomField>