force-app/main/default/objects/NotaFiscal__c/fields/DataEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataEmissao__c</fullName>
    <label>Data Emissão</label>
    <type>Date</type>
</CustomField>