force-app/main/default/objects/NotaFiscal__c/fields/DataSaida__c.field-meta.xml
<CustomField>
    <fullName>DataSaida__c</fullName>
    <label>Data Saída</label>
    <type>Date</type>
</CustomField>