force-app/main/default/objects/NotaFiscal__c/fields/EspecieNota__c.field-meta.xml
<CustomField>
    <fullName>EspecieNota__c</fullName>
    <label>Espécie Nota</label>
    <length>3</length>
    <type>Text</type>
</CustomField>