force-app/main/default/objects/NotaFiscal__c/fields/NaturezaOperacaoId__c.field-meta.xml
<CustomField>
    <fullName>NaturezaOperacaoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natureza de Operação</label>
    <referenceTo>NaturezaOperacao__c</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <type>Lookup</type>
</CustomField>