force-app/main/default/objects/NotaFiscal__c/fields/NotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscal__c</fullName>
    <externalId>true</externalId>
    <label>Nota Fiscal</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>