force-app/main/default/objects/NotaFiscal__c/fields/PesoBruto__c.field-meta.xml
<CustomField>
    <fullName>PesoBruto__c</fullName>
    <label>Peso Bruto</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>