force-app/main/default/objects/NotaFiscal__c/fields/PesoLiquido__c.field-meta.xml
<CustomField>
    <fullName>PesoLiquido__c</fullName>
    <label>Peso Líquido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>