force-app/main/default/objects/NotaFiscal__c/fields/PlacaVeiculo__c.field-meta.xml
<CustomField>
    <fullName>PlacaVeiculo__c</fullName>
    <label>Placa do Veículo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>