force-app/main/default/objects/NotaFiscal__c/fields/RepresentanteId__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <type>Lookup</type>
</CustomField>