force-app/main/default/objects/NotaFiscal__c/fields/SituacaoNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>SituacaoNotaFiscal__c</fullName>
    <label>Situação da Nota Fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>Normal</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cancelada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>