force-app/main/default/objects/NotaFiscal__c/fields/TipoFrete__c.field-meta.xml
<CustomField>
    <fullName>TipoFrete__c</fullName>
    <label>Tipo de Frete</label>
    <length>2</length>
    <type>Text</type>
</CustomField>