force-app/main/default/objects/NotaFiscal__c/fields/TransportadoraId__c.field-meta.xml
<CustomField>
    <fullName>TransportadoraId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportadora</label>
    <referenceTo>Transportadora__c</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <type>Lookup</type>
</CustomField>