force-app/main/default/objects/NotaFiscal__c/fields/ValorFrete__c.field-meta.xml
<CustomField>
    <fullName>ValorFrete__c</fullName>
    <label>Valor do Frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>