force-app/main/default/objects/NotaFiscal__c/fields/ValorICMSST__c.field-meta.xml
<CustomField>
    <fullName>ValorICMSST__c</fullName>
    <label>Valor ICMS ST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>