force-app/main/default/objects/NotaFiscal__c/fields/ValorIPI__c.field-meta.xml
<CustomField>
    <fullName>ValorIPI__c</fullName>
    <label>Valor IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>