force-app/main/default/objects/NotaFiscal__c/fields/ValorMercadoria__c.field-meta.xml
<CustomField>
    <fullName>ValorMercadoria__c</fullName>
    <label>Valor Mercadoria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>