force-app/main/default/objects/NotaFiscal__c/fields/ValorNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>ValorNotaFiscal__c</fullName>
    <label>Valor Nota Fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>