force-app/main/default/objects/NotaFiscal__c/fields/ValorSeguro__c.field-meta.xml
<CustomField>
    <fullName>ValorSeguro__c</fullName>
    <label>Valor do Seguro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>